@@ -227,6 +227,9 @@ read_core_config(void)
     cmd[0] = "XKILL_DISABLE";
     if (get_resource(xrc, cmd, value, 256, 1))
 	set_data(&(xcin_core.xcin_mode), RC_IFLAG, value, XCIN_XKILL_OFF, 0);
+    cmd[0] = "ICCHECK_DISABLE";
+    if (get_resource(xrc, cmd, value, 256, 1))
+	set_data(&(xcin_core.xcin_mode), RC_IFLAG, value, XCIN_ICCHECK_OFF, 0);
     cmd[0] = "SINGLE_IM_CONTEXT";
     if (get_resource(xrc, cmd, value, 256, 1))
 	set_data(&(xcin_core.xcin_mode), RC_IFLAG, value, XCIN_SINGLE_IMC, 0);
