@@ -17,6 +17,8 @@ xcin-2.5.3-pre3:  2001/12
    Because not all the window will emit the XConfigureEvent when window is
    moved, and these codes may lead to some unstable situations.
 
+6. Readd xim_IC.c: check_ic_exist().
+
 
 xcin-2.5.3-pre2:  2001/12/02
 ------------------------------
